--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,22 @@ version: '3.7'
 services:
     web:
         build: .
-        command: python /code/manage.py runserver 0.0.0.0:8000
+        command: gunicorn main.wsgi -b 0.0.0.0:8000 --log-level DEBUG
         env_file:
-            - .env
+            - main/.env
         volumes:
             - .:/code
         ports:
             - 8000:8000
-        depends_on: 
+        depends_on:
             - db
+
     db:
         image: postgres:11
-        environment: 
+        environment:
             POSTGRES_PASSWORD: postgres
         volumes:
             - postgres_data:/var/lib/postgresql/data/
-volumes: 
+volumes:
     postgres_data:
+
