--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.1
 django-allauth==0.42.0
+django-crispy-forms==1.9.2
+django-extensions==3.0.5
+factory_boy==3.0.1
+Faker==4.1.2
 gunicorn==20.0.4
 idna==2.10
 isort==5.5.3
