--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
 psycopg2==2.8.5
+ptvsd==4.3.2
 pycodestyle==2.6.0
 pylint==2.6.0
 pylint-django==2.3.0
