--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ isort==5.5.3
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
-psycopg2==2.8.5
+psycopg2-binary==2.8.6
 ptvsd==4.3.2
 pycodestyle==2.6.0
 pylint==2.6.0
