using postgres 13.2 alpine base image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
         build: .
         command: gunicorn main.wsgi -b 0.0.0.0:8000 --log-level DEBUG
         env_file:
-            - main/.env
+            - .env
         volumes:
-            - .:/code
+            - ./backend:/code
         ports:
             - 8000:8000
             - 4000:4000
@@ -15,7 +15,7 @@ services:
             - db
 
     db:
-        image: postgres:11
+        image: postgres:13.2-alpine
         environment:
             POSTGRES_PASSWORD: postgres
         volumes:
