--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ django-allauth==0.42.0
 django-countries==6.1.3
 django-crispy-forms==1.9.2
 django-extensions==3.0.5
+django-taggit
 factory_boy==3.0.1
 Faker==4.1.2
 gunicorn==20.0.4
