added nginx as a webserver to serve static files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
             - 4000:4000
         depends_on:
             - db
+        networks:
+            - main
 
     db:
         image: postgres:13.2-alpine
@@ -22,6 +24,28 @@ services:
             POSTGRES_PASSWORD: postgres
         volumes:
             - postgres_data:/var/lib/postgresql/data/
+        networks:
+            - main
+
+    nginx:
+        container_name: nginx
+        build:
+            context: ./nginx
+            dockerfile: dev/Dockerfile
+        ports:
+            - "80:80"
+        volumes:
+            - ./nginx/dev/dev.conf:/etc/nginx/nginx.conf:ro
+            - ./backend/staticfiles:/usr/src/app/assets
+        depends_on:
+            - web
+        networks:
+            - main
+            
+networks:
+    main:
+        driver: bridge
+
 volumes:
     postgres_data:
 
