--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 autopep8==1.5.4
+bandit
 coverage==5.3
 dj-database-url==0.5.0
 Django==3.2.9
@@ -8,6 +9,7 @@ django-crispy-forms==1.9.2
 django-extensions==3.0.5
 django-taggit
 factory_boy==3.0.1
+flake8
 gunicorn==20.0.4
 psycopg2-binary==2.9.2
 ptvsd==4.3.2
