--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,6 @@ on: [push]
 env:
   WEB_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')/web
   NGINX_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')/nginx
-  DB_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')/db
 
 jobs:
   build:
@@ -30,7 +29,6 @@ jobs:
         run: |
           echo "WEB_IMAGE=$(echo ${{env.WEB_IMAGE}})" >> $GITHUB_ENV
           echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}})" >> $GITHUB_ENV
-          echo "DB_IMAGE=$(echo ${{env.DB_IMAGE}})" >> $GITHUB_ENV
       - name: Log in to Github Packages
         run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u $${{ secrets.NAMESPACE }} --password-stdin
         env:
@@ -39,15 +37,13 @@ jobs:
         run: |
           docker pull ${{ env.WEB_IMAGE }} || true
           docker pull ${{ env.NGINX_IMAGE }} || true
-          docker pull ${{ env.DB_IMAGE }} || true
       - name: Build images
         run: |
-          docker-compose build
+          docker-compose -f docker-compose.ci.yml build
       - name: Push images
         run: |
           docker push ${{ env.WEB_IMAGE }}
           docker push ${{ env.NGINX_IMAGE }}
-          docker push ${{ env.DB_IMAGE }}
 
   deploy:
     name: Deploy to DigitalOcean
@@ -87,14 +83,13 @@ jobs:
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          scp  -o StrictHostKeyChecking=no -r ./.env ./docker-compose.yml root@${{ secrets.DIGITAL_OCEAN_IP_ADDRESS }}:/code
+          scp  -o StrictHostKeyChecking=no -r ./.env ./docker-compose.ci.yml root@${{ secrets.DIGITAL_OCEAN_IP_ADDRESS }}:/code
           ssh -o StrictHostKeyChecking=no root@${{ secrets.DIGITAL_OCEAN_IP_ADDRESS }} << 'ENDSSH'
             cd /code
             source .env
             docker login ghcr.io -u $NAMESPACE -p $PERSONAL_ACCESS_TOKEN
             docker pull $WEB_IMAGE
             docker pull $NGINX_IMAGE
-            docker pull $DB_IMAGE
             docker container prune -f
-            docker-compose -f docker-compose.yml up -d
+            docker-compose -f docker-compose.ci.yml up -d
           ENDSSH
