--- a/nginx/prod/Dockerfile
+++ b/nginx/prod/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:1.19.8-alpine
-COPY dev/dev.conf /etc/nginx/nginx.conf
+FROM nginx:1.19.9-alpine
+COPY prod/prod.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
