--- a/nginx/prod/prod.conf
+++ b/nginx/prod/prod.conf
@@ -20,18 +20,24 @@ http {
         root /dist/;
         index index.html;
 
-        # backend URLs
-        location ~ ^/(dj-admin|api) {
+        location / {
             proxy_redirect off;
             proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # static files
-        location /static {
+        location /static/ {
             autoindex on;
-            alias /code/staticfiles; # <-- change this
+            alias /usr/src/app/assets;
+        }
+        
+        location /media/ {
+            autoindex on;
+            alias /usr/src/app/media;
         }
     }
 }
