bug fix in nginx prod config

--- a/nginx/prod/prod.conf
+++ b/nginx/prod/prod.conf
@@ -32,12 +32,12 @@ http {
 
         location /static/ {
             autoindex on;
-            alias /usr/src/app/assets;
+            alias /usr/src/app/assets/;
         }
         
         location /media/ {
             autoindex on;
-            alias /usr/src/app/media;
+            alias /usr/src/app/media/;
         }
     }
 }
