--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 autopep8==1.5.4
 bandit
+boto3==1.18.36
 coverage==5.3
 dj-database-url==0.5.0
 Django==3.2.9
@@ -7,6 +8,7 @@ django-allauth==0.42.0
 django-countries==7.2.1
 django-crispy-forms==1.9.2
 django-extensions==3.0.5
+django-storages==1.11.1
 django-taggit
 factory_boy==3.0.1
 flake8
