Add static volume and media volume

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - static_volume:/usr/src/app/assets
+      - static_volume:/usr/src/app/staticfiles
       - media_volume:/usr/src/app/media
     networks:
       - main
