--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             - .env
         volumes:
             - ./backend:/code
+            - static_volume:/code/staticfiles
+            - media_volume:/code/media
         restart: unless-stopped
         ports:
             - "8000:8000"
@@ -37,7 +39,8 @@ services:
             - "443:443"
         volumes:
             - ./nginx/dev/dev.conf:/etc/nginx/nginx.conf:ro
-            - ./backend/staticfiles:/usr/src/app/assets
+            - static_volume:/usr/src/app/staticfiles
+            - media_volume:/usr/src/app/media
         depends_on:
             - web
         networks:
@@ -49,4 +52,6 @@ networks:
 
 volumes:
     postgres_data:
+    static_volume:
+    media_volume:
 
