--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -44,8 +44,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - static_volume:/code/staticfiles
-      - media_volume:/code/media
+      - static_volume:/usr/src/app/staticfiles
+      - media_volume:/usr/src/app/media
     networks:
       - main
     depends_on:
