Correct routing for media files

--- a/nginx/dev/dev.conf
+++ b/nginx/dev/dev.conf
@@ -19,7 +19,12 @@ http {
 
         location /static/ {
             autoindex on;
-            alias /usr/src/app/assets/;
+            alias /usr/src/app/staticfiles/;
+        }
+
+        location /media/ {
+            autoindex on;
+            alias /usr/src/app/media/;
         }
 
         location / {
