--- a/nginx/prod/prod.conf
+++ b/nginx/prod/prod.conf
@@ -32,7 +32,7 @@ http {
 
         location /static/ {
             autoindex on;
-            alias /usr/src/app/assets/;
+            alias /usr/src/app/staticfiles/;
         }
         
         location /media/ {
