--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -98,4 +98,6 @@ jobs:
             docker pull $NGINX_IMAGE
             docker container prune -f
             docker-compose -f docker-compose.prod.yml up -d
+            docker-compose -f docker-compose.prod.yml exec web python manage.py migrate
+            docker-compose -f docker-compose.prod.yml exec web python manage.py collectstatic --noinput
           ENDSSH
