--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -8,7 +8,7 @@ services:
       cache_from:
         - "${WEB_IMAGE}"
     image: "${WEB_IMAGE}"
-    command: gunicorn main.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn main.wsgi:application --workers 3 --bind 0.0.0.0:8000
     env_file: .env
     volumes:
       - static_volume:/code/staticfiles
