read gunicorn config from file

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   web:
     image: "${WEB_IMAGE}"
-    command: gunicorn main.wsgi:application --workers 3 --bind 0.0.0.0:8000
+    command: gunicorn main.wsgi:application -c main/gunicorn.conf.py
     env_file: .env
     volumes:
       - static_volume:/code/staticfiles
