Improve isort config

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,10 +11,13 @@ format = pylint
 show-source = True
 max-complexity = 10
 
-[isort]
-combine_as_imports = true
+[isort] 
 default_section = THIRDPARTY
+combine_as_imports = true
 include_trailing_comma = true
-known_first_party = django
-line_length = 79
+known_first_party = main
+known_django = django
+line_length = 100
 multi_line_output = 5
+skip = "migrations"
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
