--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,3 @@
-
 [flake8]
 max-line-length = 119
 exclude =
@@ -6,6 +5,7 @@ exclude =
     __pycache__,
     .pytest_cache,
     venv
+    *migrations*
 ignore = E501,  F401
 format = pylint
 show-source = True
