--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==0.42.0
 django-countries==7.2.1
 django-crispy-forms==1.9.2
 django-extensions==3.0.5
+django-rosetta
 django-storages==1.11.1
 django-taggit
 factory_boy==3.0.1
