correct ignore warnings for flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ exclude =
     .pytest_cache,
     venv
     *migrations*
-ignore = E501,  F401
+ignore = E501
 format = pylint
 show-source = True
 max-complexity = 10
