--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ gunicorn = "^20.1.0"
 pillow = "^9.3.0"
 sentry-sdk = "^1.11.0"
 stripe = "^5.0.0"
+psycopg2-binary = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
