--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ pillow = "^9.3.0"
 sentry-sdk = "^1.11.0"
 stripe = "^5.0.0"
 psycopg2-binary = "^2.9.5"
+python-dotenv = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
